--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,7 +9,7 @@ builds:
       - amd64
       - 386
     ldflags:
-      - -s -w -X main.version=v{{ .Version }}
+      - -s -w -X main.version={{ .Version }}
 archive:
   format: tar.gz
   name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
