--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 script:
   - make test
 after_success:
-  - GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser release
+  - GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser
   # - test -n "$TRAVIS_TAG" && GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser release
   # - test "$TRAVIS_OS_NAME" = "linux" -a -n "$TRAVIS_TAG" && GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser
   # - test -n "$TRAVIS_TAG" && curl -sL https://git.io/goreleaser | bash
