--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,15 +1,15 @@
 builds:
-  - env:
+  env:
     - GO111MODULE=on
-  - binary: vpngate-cli
-    main: ./cmd/vpngate-cli/main.go
-    goos:
-      - linux
-    goarch:
-      - amd64
-      - 386
-    ldflags:
-      - '-s -w -X main.version={{ .Version }}'
+  binary: vpngate-cli
+  main: ./cmd/vpngate-cli/main.go
+  goos:
+    - linux
+  goarch:
+    - amd64
+    - 386
+  ldflags:
+    - '-s -w -X main.version={{ .Version }}'
 archive:
   format: tar.gz
   name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
