--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,12 @@ branches:
   only: master
 script:
   - make test
-after_success:
-  - GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser --rm-dist
+# after_success:
+  # - GO111MODULE=off go get github.com/goreleaser/goreleaser && goreleaser --rm-dist
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: curl -sL https://git.io/goreleaser | bash
+  on:
+    tags: true
+    condition: $TRAVIS_OS_NAME = linux
