--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
     - GO111MODULE=on
 sudo: false
 branches:
-  only: master
+  # only: master
+  all_branches: true
 script:
   - make test
 # after_success:
